# alba

./: .gitignore  .projectile  .travis.yml  COMPILING.md  COMPILING_CENTOS.md  GITBOOK.md  LICENSE  Makefile  NOTICE.txt  README.md  SUMMARY.md  book.json  contributors.txt  package.py  run_demo_kinetic.sh  run_with_timeout_and_progress.sh  slow.py  travis.sh
cfg/: albamgr_example_arakoon_cfg.ini  asd_demo.json  backend.json  enc_key  fragment_cache_config.json  gioexecfile.conf  maintenance_demo.json  nsm_host_arakoon_cfg.ini  preset.json  preset_kinetic.json  preset_no_checksums.json  preset_no_compression.json  preset_test.json  preset_update.json  preset_update2.json  proxy_demo.json  test.ini  test_2.ini  test_abm.ini  test_nsm_1.ini  test_nsm_2.ini  test_tls.ini
cpp/: .clang-format  Makefile  Tupfile  Tuprules.tup  test_data
cpp/automake_client/: Makefile.am  build.sh  configure.ac
cpp/include/: alba_common.h  alba_logger.h  asd_access.h  asd_client.h  asd_protocol.h  boolean_enum.h  checksum.h  encryption.h  generic_proxy_client.h  io.h  llio.h  manifest.h  osd_access.h  osd_info.h  proxy_client.h  proxy_protocol.h  proxy_sequences.h  rdma_proxy_client.h  rdma_transport.h  spinlock.h  statistics.h  stuff.h  tcp_proxy_client.h  tcp_transport.h  transport.h  transport_helper.h
cpp/src/examples/: paranoia.cc  test_client.cc
cpp/src/lib/: alba_common.cc  alba_logger.cc  asd_access.cc  asd_client.cc  asd_protocol.cc  checksum.cc  encryption.cc  io.cc  (+25 more)
debian/: alba.postinst  changelog  control  copyright  rules
doc/: demo_pres.tex  docker_howto.org  kinetic_multi_update_propoposal.org  maintenance.txt  metadata-persistence.org  pres_1.tex  rebalancing.org
docker/: docker-entrypoint.sh  run.sh
docker/alba_base/: Dockerfile
docker/alba_centos7/: Dockerfile
docker/alba_centos7_jenkins/: Dockerfile
docker/alba_centos7_verify/: Dockerfile
docker/alba_debian/: Dockerfile
docker/alba_debian_jenkins/: Dockerfile
docker/alba_debian_verify/: Dockerfile
docker/alba_ocaml/: Dockerfile
docker/alba_trisquel/: Dockerfile
docker/alba_ubuntu_16_04/: Dockerfile
docker/alba_ubuntu_mini/: Dockerfile
docker/centos-7/: Dockerfile
docker/centos-7-verify/: Dockerfile
docker/ubuntu-14.04/: Dockerfile
docker/ubuntu-14.04-verify/: Dockerfile
docker/ubuntu-16.04/: Dockerfile
docker/ubuntu-16.04-verify/: Dockerfile
docs/: README.md  alba_storage_protocol.txt  albaproxy.md  architecture.org  client.md  demo_pres.tex  dependencies.md  export.el  maintenance.md  plan_b.tex  requirements.tex  selfhealing.md  setup-guide.md  usingalba.md
docs/diagrams/: coldest.mermaid  coldest_pracc.mermaid  hot.mermaid  hot_pracc.mermaid  partial_read.md
fabfile/: __init__.py  alba.py  dev.py  env.py
jenkins/: 008_install_dev_env.sh  045-archive.sh  050-smoke_test.sh  run.sh  run2.sh
jenkins/asd_start/: 020-build_ocaml.sh  040-run_tests.sh
jenkins/cpp/: 010-build_client.sh  040-run_unit_tests.sh
jenkins/disk_failures/: 040-run_tests.sh
jenkins/doc/: 010-make-doc.sh
jenkins/package/: 030-package.sh
jenkins/package_deb/: 030-package.sh
jenkins/package_rpm/: 030-package.sh
jenkins/recovery/: 040-run_tests.sh
jenkins/stress/: 030-build_virtenv.sh  040-run_tests.sh  045-archive.sh
jenkins/system2/: 020-build_ocaml.sh  030-build_virtenv.sh  040-run_tests.sh  050-smoke_test.sh
jenkins/test_integrate_deb/: 040-run_tests.sh
jenkins/test_integrate_rpm/: 040-run_tests.sh
jenkins/voldrv_backend/: 040_run_tests.sh
jenkins/voldrv_tests/: 040_run_tests.sh
ocaml/: .merlin  _tags  myocamlbuild.ml
ocaml/src/: access.ml  alba.ml  alba_arakoon.ml  alba_arakoon_deser.ml  alba_base_client.ml  alba_based_osd.ml  alba_bench.ml  alba_client.ml  alba_client2.ml  alba_client_common.ml  alba_client_download.ml  alba_client_download_slices.ml  alba_client_errors.ml  alba_client_message_delivery.ml  alba_client_message_delivery_base.ml  alba_client_namespace.ml  alba_client_osd.ml  alba_client_preset_cache.ml  alba_client_sequence.ml  alba_client_upload.ml  alba_eviction.ml  alba_json.ml  alba_osd.ml  alba_osd_test.ml  alba_statistics.ml  alba_statistics2.ml  alba_test.ml  albamgr_access.ml  albamgr_client.ml  albamgr_plugin.ml  albamgr_protocol.ml  albamgr_protocol_test.ml  albamgr_statistics.ml  albamgr_test.ml  arith64.ml  asd_bench.ml  asd_client.ml  asd_config.ml  asd_config_test.ml  asd_io_scheduler.ml  (+113 more)
ppx/: _tags  alba_ppx_lwt.ml
redhat/SPECS/: alba.spec
scriptlets/: graph_it.py  osds_for_namespace.py  process.py
setup/: .ocamlinit  _tags  prul.ml  setup.ml
(+93 files in other folders)
